[project]
name = "crochet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.8",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "libigl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
libigl = { git = "https://github.com/libigl/libigl-python-bindings.git" }

[project.scripts]
hello = "crochet:hello"
geodesic = "crochet.geodesic:main"
